<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NotificationSettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.NotificationSettingsFragment"
        android:padding="16dp">

        <TextView
            android:id="@+id/notification_importance_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/notification_importance_tv_text"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <RadioGroup
            android:id="@+id/importance_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notification_importance_tv"
            android:layout_marginTop="16dp">
            <RadioButton
                android:id="@+id/importance_medium_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importance_medium"
                android:textSize="20sp"/>
            <RadioButton
                android:id="@+id/importance_high_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importance_high"
                android:textSize="20sp"/>
            <RadioButton
                android:id="@+id/importance_urgent_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importance_urgent"
                android:textSize="20sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/notification_privacy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/importance_rg"
            android:layout_marginTop="16dp"
            android:text="@string/notification_privacy_tv_text"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <RadioGroup
            android:id="@+id/privacy_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notification_privacy_tv"
            android:layout_marginTop="16dp">
            <RadioButton
                android:id="@+id/privacy_public_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_public"
                android:textSize="20sp"/>
            <RadioButton
                android:id="@+id/privacy_secret_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_secret"
                android:textSize="20sp"/>
            <RadioButton
                android:id="@+id/privacy_private_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_private"
                android:textSize="20sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/notification_detailing_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/privacy_rg"
            android:layout_marginTop="16dp"
            android:text="@string/notification_detailing_tv_text"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <CheckBox
            android:id="@+id/detailing_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notification_detailing_tv"
            android:layout_marginTop="16dp"
            android:text="@string/detail_cb_text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/notification_buttons_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/detailing_cb"
            android:text="@string/notification_buttons_tv_text"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/buttons_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notification_buttons_tv"
            android:layout_marginTop="16dp"
            android:text="@string/buttons_cb_text"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
