<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NotificationExecuteFragment"
    android:padding="16dp">

    <EditText
        android:id="@+id/notification_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/notification_title_et_hint"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <EditText
        android:id="@+id/notification_body_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notification_title_et"
        android:hint="@string/notification_body_et"
        android:importantForAutofill="no"
        android:layout_marginTop="16dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/send_notification_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_notification_btn_text"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>